[package]
name = "cargo-redoc"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
lol_html = "0.2.0"
log = "0.4"
pretty_env_logger = "0.4"
kuchiki = "0.8.0"
notify = "4.0"
opener = "0.4"
futures-util = "0.3"
http = "0.2"
hyper = "0.13"
hyper-staticfile = "0.5"
tokio = { version = "0.2", features = ["sync", "macros"] }